# st-device-sdk-c-ref

./: .gitmodules  README.md  build.py  build.sh  setup.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
apps/: .gitignore  esp32_v3.3
apps/capability_sample/: README.md  caps_accelerationSensor.c  caps_accelerationSensor.h  caps_activityLightingMode.c  caps_airQualitySensor.c  caps_airQualitySensor.h  caps_alarm.c  caps_antiSnoringPillow.c  caps_antiSnoringPillow.h  caps_audioMute.c  caps_audioMute.h  caps_audioVolume.c  caps_audioVolume.h  caps_battery.c  caps_battery.h  caps_bodyMassIndexMeasurement.c  caps_bodyWeightMeasurement.c  caps_button.c  caps_carbonDioxideHealthConcern.c  caps_carbonDioxideHealthConcern.h  caps_carbonDioxideMeasurement.c  caps_carbonMonoxideDetector.c  caps_carbonMonoxideMeasurement.c  caps_carbonMonoxideMeasurement.h  caps_colorControl.c  caps_colorControl.h  caps_contactSensor.c  caps_dishwasherOperatingState.c  caps_dishwasherOperatingState.h  caps_doorControl.c  caps_dryerOperatingState.c  caps_dryerOperatingState.h  caps_dustHealthConcern.c  caps_dustHealthConcern.h  caps_dustSensor.c  caps_dustSensor.h  caps_energyMeter.c  caps_energyMeter.h  caps_equivalentCarbonDioxideMeasurement.c  caps_execute.c  (+108 more)
apps/esp32/ota_demo/main/: CMakeLists.txt  caps_firmwareUpdate.c  component.mk  device_control.c  device_control.h  iot_cli_cmd.c  iot_uart_cli.c  main.c  ota_demo.c  ota_util.c  ota_util.h  public_key.pem  root.pem
apps/esp32/st_switch/main/: CMakeLists.txt  device_control.h  smart_switch.c
apps/esp32/switch_button_example/main/: CMakeLists.txt  caps_button.h  device_info.json  iot_uart_cli.h  main.c  onboarding_config.json
apps/esp32/switch_example/main/: CMakeLists.txt  device_control.c  device_control.h  iot_cli_cmd.c  iot_cli_cmd.h  main.c
apps/esp32c3/switch_example/main/: CMakeLists.txt  caps_switch.c  device_control.c  device_control.h  iot_cli_cmd.c  iot_cli_cmd.h  iot_uart_cli.c  main.c
doc/: GettingStarted.md  getting_started.md  nvs_encryption_esp32.md  ota_demo.md
doc/res/: ota_diagram.puml
patches/bl602/: 0001-add-stdk-compile-modifications-for-bl602.patch
patches/emw3080/: 0002-Add-libsodium-for-stdk.patch  0003-Add-cJSON-for-stdk.patch  0004-Enable-stdk-compile-in-emw3080-with-MoCOS-and-MoCIP.patch  0005-Optimize-binary-size-in-mbedtls.patch  0006-Optimize-binary-size-in-iot-core-config.patch  0007-add-CONFIG_STDK_IOT_CORE_EASYSETUP_HTTP_USE_SOCKET_A.patch
patches/emw3166/: 0002-Add-Lwip-for-stdk.patch  0003-Add-Libsodim-for-stdk.patch  0004-Add-cJson-for-stdk.patch  0005-Add-stdk-compile-for-emw3166.patch  0006-Temporary-solution-of-increasing-tcpip-thread-stack.patch  0007-add-CONFIG_STDK_IOT_CORE_EASYSETUP_HTTP_USE_SOCKET_A.patch
patches/esp32/: 0001-esp32-mbedtls-Add-MBEDTLS_DEBUG_LEVEl-config-for-log.patch  0001-st_iot_core-add-debug-option-to-FreeRTOSConfig.h.patch  0003-st_iot_core-add-freertos-header-path.patch  1001-mbedtls-esp-add-support-eckey-alt-that-use-iot-secur.patch.manual  1001-mbedtls-esp_config-add-MBEDTLS_SSL_ASYNC_PRIVATE.patch  1002-mbedtls-Kconfig-add-option-for-MBEDTLS_SSL_ASYNC_PRI.patch  1002-mbedtls-esp_config-added-CONFIG_STDK_IOT_CORE_MBEDTL.patch
patches/esp32_v3.3/: 0001-esp32-mbedtls-Add-MBEDTLS_DEBUG_LEVEl-config-for-log.patch  0002-st_iot_core-add-SSL_CTX_load_verify_buffer.patch  0003-st_iot_core-add-freertos-header-path.patch  0004-Use-__asm__-instead-of-asm-for-c99-build.patch  1001-mbedtls-esp_config-add-MBEDTLS_SSL_ASYNC_PRIVATE.patch  1002-mbedtls-Kconfig-add-option-for-MBEDTLS_SSL_ASYNC_PRI.patch
patches/esp8266/: 0001-st_iot_core-Add-SS_VER-display-routine-to-check-test.patch  0002-st_iot_core-esp8266-add-debug-option-to-FreeRTOSConf.patch  1000-mbedtls-config-set-MBEDTLS_NO_UDBL_DIVISION-to-impro.patch  1001-mbedtls-esp-disable-not-used-features.patch  1001-mbedtls-esp-enable-PKCS7-padding-for-cipher.patch  1002-mbedtls-esp-applied-binary-optimization-for-io.patch  1002-mbedtls-esp-disable-not-used-features.patch  1003-mbedtls-esp-code-size-optimization.patch  1003-mbedtls-esp-enable-sha1-config.patch  1004-mbedtls-esp-add-config-for-eckey-alt.patch  1004-mbedtls-esp-applied-binary-optimization-for-iot-core.patch  1005-mbedtls-esp-add-MBEDTLS_SSL_ASYNC_PRIVATE-in-configu.patch  1005-mbedtls-esp-enable-sha1-config.patch  1006-mbedtls-Kconfig-add-option-for-MBEDTLS_SSL_ASYNC_PRI.patch  1006-mbedtls-esp-add-support-eckey-alt-that-use-iot-secur.patch  2000-cjson-fix-wrong-traling-zeroes-removing.patch  9000-cjson-fix-CVE-2019-1010239.patch
patches/rtl8195/: 0001-Update-mbedtls-ssl.patch  0002-Update-cJSON-for-iot-core.patch  0003-Update-network-for-iot-core.patch  0004-Update-libsodium-for-iot-core.patch  0005-Update-platform-config.patch  0006-Update-ameba1-rtl8195-configuration.patch  0007-Config-sntp-for-sdk.patch  0008-add-usr_config.mk-for-in-app-can-enable-disable-conf.patch
(+478 files in other folders)
